src/parser.output
Terminals unused in grammar

   T_ELLIPSIS
   T_PTR_OP
   T_LSQUAREBRACKET
   T_RSQUAREBRACKET
   T_DOT
   T_EXCLAMATION
   T_TILDE
   T_GOTO
   T_BREAK
   T_CONTINUE
   T_SIZEOF
   T_CONST
   T_VOLATILE
   T_VOID
   T_CHAR
   T_LONG
   T_SIGNED
   T_UNSIGNED
   T_FLOAT
   T_DOUBLE
   T_STRUCT
   T_UNION
   T_TYPEDEF
   T_AUTO
   T_REGISTER
   T_EXTERN
   T_STATIC


Grammar

    0 $accept: ROOT $end

    1 ROOT: PROGRAM

    2 PROGRAM: ALL_DECLEARARION
    3        | PROGRAM ALL_DECLEARARION

    4 ALL_DECLEARARION: DECLARATION
    5                 | FUNCTION

    6 DECLARATION: DECLARATION_SPECIFIERS T_SIMICOLOUMN
    7            | DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST T_SIMICOLOUMN

    8 DECLARATION_SPECIFIERS: TYPE_SPECIFIER

    9 TYPE_SPECIFIER: T_INT

   10 INIT_DECLARATOR_LIST: INIT_DECLARATOR
   11                     | INIT_DECLARATOR_LIST T_COMMA INIT_DECLARATOR

   12 INIT_DECLARATOR: DECLARATOR
   13                | DECLARATOR T_EQUAL INITIALIZER

   14 DECLARATOR: DIRECT_DECLARATOR

   15 DIRECT_DECLARATOR: T_VARIABLE

   16 INITIALIZER: ASSIGNMENT_EXPRESSION

   17 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION
   18                    | ADDITIVE_EXPRESSION T_PLUS MULTIPLICATIVE_EXPRESSION
   19                    | ADDITIVE_EXPRESSION T_MINUS MULTIPLICATIVE_EXPRESSION

   20 MULTIPLICATIVE_EXPRESSION: UNARY_EXPRESSION
   21                          | MULTIPLICATIVE_EXPRESSION T_STAR UNARY_EXPRESSION
   22                          | MULTIPLICATIVE_EXPRESSION T_DIVIDE UNARY_EXPRESSION
   23                          | MULTIPLICATIVE_EXPRESSION T_MOD UNARY_EXPRESSION

   24 UNARY_EXPRESSION: POSTFIX_EXPRESSION
   25                 | T_DEC_OP UNARY_EXPRESSION
   26                 | T_INC_OP UNARY_EXPRESSION

   27 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION
   28                   | POSTFIX_EXPRESSION T_LBRACKET T_RBRACKET
   29                   | POSTFIX_EXPRESSION T_LBRACKET INIT_DECLARATOR_LIST T_RBRACKET
   30                   | POSTFIX_EXPRESSION T_INC_OP
   31                   | POSTFIX_EXPRESSION T_DEC_OP

   32 PRIMARY_EXPRESSION: T_VARIABLE
   33                   | T_NUMBER
   34                   | T_LBRACKET EXPRESSION T_RBRACKET

   35 FUNCTION: DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
   36         | DECLARATOR T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
   37         | DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
   38         | DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
   39         | DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET T_RBRACKET T_SIMICOLOUMN
   40         | DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET T_SIMICOLOUMN

   41 PARAM_DECLARATION_LIST: DECLARATION_SPECIFIERS DECLARATOR
   42                       | DECLARATION_SPECIFIERS DECLARATOR T_COMMA PARAM_DECLARATION_LIST

   43 COMPOUND_STATEMENT: T_LCURLYBRACKET T_RCURLYBRACKET
   44                   | T_LCURLYBRACKET DECLARATION_LIST T_RCURLYBRACKET
   45                   | T_LCURLYBRACKET STATEMENT_LIST T_RCURLYBRACKET
   46                   | T_LCURLYBRACKET DECLARATION_LIST STATEMENT_LIST T_RCURLYBRACKET

   47 DECLARATION_LIST: DECLARATION
   48                 | DECLARATION_LIST DECLARATION

   49 STATEMENT_LIST: STATEMENT
   50               | STATEMENT_LIST STATEMENT

   51 STATEMENT: COMPOUND_STATEMENT
   52          | JUMP_STATEMENT
   53          | EXPRESSION_STATEMENT
   54          | IF_STATEMENT
   55          | ITERATION_STATEMENT

   56 IF_STATEMENT: T_IF T_LBRACKET EXPRESSION T_RBRACKET STATEMENT
   57             | T_IF T_LBRACKET EXPRESSION T_RBRACKET STATEMENT T_ELSE STATEMENT

   58 ITERATION_STATEMENT: T_WHILE T_LBRACKET EXPRESSION T_RBRACKET STATEMENT
   59                    | T_DO STATEMENT T_WHILE T_LBRACKET EXPRESSION T_RBRACKET T_SIMICOLOUMN
   60                    | T_FOR T_LBRACKET EXPRESSION_STATEMENT EXPRESSION_STATEMENT T_RBRACKET STATEMENT
   61                    | T_FOR T_LBRACKET EXPRESSION_STATEMENT EXPRESSION_STATEMENT EXPRESSION T_RBRACKET STATEMENT

   62 JUMP_STATEMENT: T_RETURN T_SIMICOLOUMN
   63               | T_RETURN EXPRESSION T_SIMICOLOUMN

   64 EXPRESSION_STATEMENT: T_SIMICOLOUMN
   65                     | EXPRESSION T_SIMICOLOUMN

   66 EXPRESSION: ASSIGNMENT_EXPRESSION
   67           | EXPRESSION T_COMMA ASSIGNMENT_EXPRESSION

   68 ASSIGNMENT_EXPRESSION: CONDITIONAL_EXPRESSION
   69                      | UNARY_EXPRESSION ASSIGNMENT_OPERATOR ASSIGNMENT_EXPRESSION

   70 CONDITIONAL_EXPRESSION: LOGICAL_OR_EXPRESSION
   71                       | LOGICAL_OR_EXPRESSION T_QUESTIONMARK EXPRESSION T_COLOUMN CONDITIONAL_EXPRESSION

   72 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION
   73                      | LOGICAL_AND_EXPRESSION T_OR_OP INCLUSIVE_OR_EXPRESSION

   74 LOGICAL_AND_EXPRESSION: INCLUSIVE_OR_EXPRESSION
   75                       | LOGICAL_AND_EXPRESSION T_AND_OP INCLUSIVE_OR_EXPRESSION

   76 INCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION
   77                        | INCLUSIVE_OR_EXPRESSION T_INEXCLUS_OR EXCLUSIVE_OR_EXPRESSION

   78 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION
   79                        | EXCLUSIVE_OR_EXPRESSION T_EXCLUS_OR AND_EXPRESSION

   80 AND_EXPRESSION: EQUALITY_EXPRESSION
   81               | AND_EXPRESSION T_AMPERSAND EQUALITY_EXPRESSION

   82 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION
   83                    | EQUALITY_EXPRESSION T_EQ_OP RELATIONAL_EXPRESSION
   84                    | EQUALITY_EXPRESSION T_NE_OP RELATIONAL_EXPRESSION

   85 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION
   86                      | RELATIONAL_EXPRESSION '>' SHIFT_EXPRESSION
   87                      | RELATIONAL_EXPRESSION '<' SHIFT_EXPRESSION
   88                      | RELATIONAL_EXPRESSION T_LE_OP SHIFT_EXPRESSION
   89                      | RELATIONAL_EXPRESSION T_GE_OP SHIFT_EXPRESSION

   90 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION
   91                 | SHIFT_EXPRESSION T_LEFT_OP ADDITIVE_EXPRESSION
   92                 | SHIFT_EXPRESSION T_RIGHT_OP ADDITIVE_EXPRESSION

   93 ASSIGNMENT_OPERATOR: T_EQUAL
   94                    | T_MUL_ASSIGN
   95                    | T_DIV_ASSIGN
   96                    | T_MOD_ASSIGN
   97                    | T_ADD_ASSIGN
   98                    | T_SUB_ASSIGN
   99                    | T_LEFT_ASSIGN
  100                    | T_RIGHT_ASSIGN
  101                    | T_AND_ASSIGN
  102                    | T_XOR_ASSIGN
  103                    | T_OR_ASSIGN


Terminals, with rules where they appear

$end (0) 0
'<' (60) 87
'>' (62) 86
error (256)
T_FOR (258) 60 61
T_IF (259) 56 57
T_INT (260) 9
T_RETURN (261) 62 63
T_WHILE (262) 58 59
T_NUMBER (263) 33
T_VARIABLE (264) 15 32
T_ELLIPSIS (265)
T_RIGHT_ASSIGN (266) 100
T_LEFT_ASSIGN (267) 99
T_ADD_ASSIGN (268) 97
T_SUB_ASSIGN (269) 98
T_MUL_ASSIGN (270) 94
T_DIV_ASSIGN (271) 95
T_MOD_ASSIGN (272) 96
T_AND_ASSIGN (273) 101
T_XOR_ASSIGN (274) 102
T_OR_ASSIGN (275) 103
T_RIGHT_OP (276) 92
T_LEFT_OP (277) 91
T_INC_OP (278) 26 30
T_DEC_OP (279) 25 31
T_PTR_OP (280)
T_AND_OP (281) 75
T_OR_OP (282) 73
T_LE_OP (283) 88
T_GE_OP (284) 89
T_EQ_OP (285) 83
T_NE_OP (286) 84
T_INEXCLUS_OR (287) 77
T_EXCLUS_OR (288) 79
T_SIMICOLOUMN (289) 6 7 39 40 59 62 63 64 65
T_LCURLYBRACKET (290) 43 44 45 46
T_RCURLYBRACKET (291) 43 44 45 46
T_COMMA (292) 11 42 67
T_COLOUMN (293) 71
T_EQUAL (294) 13 93
T_LBRACKET (295) 28 29 34 35 36 37 38 39 40 56 57 58 59 60 61
T_RBRACKET (296) 28 29 34 35 36 37 38 39 40 56 57 58 59 60 61
T_LSQUAREBRACKET (297)
T_RSQUAREBRACKET (298)
T_DOT (299)
T_AMPERSAND (300) 81
T_EXCLAMATION (301)
T_TILDE (302)
T_MINUS (303) 19
T_PLUS (304) 18
T_STAR (305) 21
T_DIVIDE (306) 22
T_MOD (307) 23
T_QUESTIONMARK (308) 71
T_GOTO (309)
T_BREAK (310)
T_CONTINUE (311)
T_DO (312) 59
T_SIZEOF (313)
T_CONST (314)
T_VOLATILE (315)
T_VOID (316)
T_CHAR (317)
T_LONG (318)
T_SIGNED (319)
T_UNSIGNED (320)
T_FLOAT (321)
T_DOUBLE (322)
T_STRUCT (323)
T_UNION (324)
T_TYPEDEF (325)
T_AUTO (326)
T_REGISTER (327)
T_EXTERN (328)
T_STATIC (329)
"then" (330)
T_ELSE (331) 57


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
ROOT (80)
    on left: 1, on right: 0
PROGRAM (81)
    on left: 2 3, on right: 1 3
ALL_DECLEARARION (82)
    on left: 4 5, on right: 2 3
DECLARATION (83)
    on left: 6 7, on right: 4 47 48
DECLARATION_SPECIFIERS (84)
    on left: 8, on right: 6 7 35 37 39 40 41 42
TYPE_SPECIFIER (85)
    on left: 9, on right: 8
INIT_DECLARATOR_LIST (86)
    on left: 10 11, on right: 7 11 29
INIT_DECLARATOR (87)
    on left: 12 13, on right: 10 11
DECLARATOR (88)
    on left: 14, on right: 12 13 35 36 37 38 39 40 41 42
DIRECT_DECLARATOR (89)
    on left: 15, on right: 14
INITIALIZER (90)
    on left: 16, on right: 13
ADDITIVE_EXPRESSION (91)
    on left: 17 18 19, on right: 18 19 90 91 92
MULTIPLICATIVE_EXPRESSION (92)
    on left: 20 21 22 23, on right: 17 18 19 21 22 23
UNARY_EXPRESSION (93)
    on left: 24 25 26, on right: 20 21 22 23 25 26 69
POSTFIX_EXPRESSION (94)
    on left: 27 28 29 30 31, on right: 24 28 29 30 31
PRIMARY_EXPRESSION (95)
    on left: 32 33 34, on right: 27
FUNCTION (96)
    on left: 35 36 37 38 39 40, on right: 5
PARAM_DECLARATION_LIST (97)
    on left: 41 42, on right: 37 38 40 42
COMPOUND_STATEMENT (98)
    on left: 43 44 45 46, on right: 35 36 37 38 51
DECLARATION_LIST (99)
    on left: 47 48, on right: 44 46 48
STATEMENT_LIST (100)
    on left: 49 50, on right: 45 46 50
STATEMENT (101)
    on left: 51 52 53 54 55, on right: 49 50 56 57 58 59 60 61
IF_STATEMENT (102)
    on left: 56 57, on right: 54
ITERATION_STATEMENT (103)
    on left: 58 59 60 61, on right: 55
JUMP_STATEMENT (104)
    on left: 62 63, on right: 52
EXPRESSION_STATEMENT (105)
    on left: 64 65, on right: 53 60 61
EXPRESSION (106)
    on left: 66 67, on right: 34 56 57 58 59 61 63 65 67 71
ASSIGNMENT_EXPRESSION (107)
    on left: 68 69, on right: 16 66 67 69
CONDITIONAL_EXPRESSION (108)
    on left: 70 71, on right: 68 71
LOGICAL_OR_EXPRESSION (109)
    on left: 72 73, on right: 70 71
LOGICAL_AND_EXPRESSION (110)
    on left: 74 75, on right: 72 73 75
INCLUSIVE_OR_EXPRESSION (111)
    on left: 76 77, on right: 73 74 75 77
EXCLUSIVE_OR_EXPRESSION (112)
    on left: 78 79, on right: 76 77 79
AND_EXPRESSION (113)
    on left: 80 81, on right: 78 79 81
EQUALITY_EXPRESSION (114)
    on left: 82 83 84, on right: 80 81 83 84
RELATIONAL_EXPRESSION (115)
    on left: 85 86 87 88 89, on right: 82 83 84 86 87 88 89
SHIFT_EXPRESSION (116)
    on left: 90 91 92, on right: 85 86 87 88 89 91 92
ASSIGNMENT_OPERATOR (117)
    on left: 93 94 95 96 97 98 99 100 101 102 103, on right: 69


State 0

    0 $accept: . ROOT $end

    T_INT       shift, and go to state 1
    T_VARIABLE  shift, and go to state 2

    ROOT                    go to state 3
    PROGRAM                 go to state 4
    ALL_DECLEARARION        go to state 5
    DECLARATION             go to state 6
    DECLARATION_SPECIFIERS  go to state 7
    TYPE_SPECIFIER          go to state 8
    DECLARATOR              go to state 9
    DIRECT_DECLARATOR       go to state 10
    FUNCTION                go to state 11


State 1

    9 TYPE_SPECIFIER: T_INT .

    $default  reduce using rule 9 (TYPE_SPECIFIER)


State 2

   15 DIRECT_DECLARATOR: T_VARIABLE .

    $default  reduce using rule 15 (DIRECT_DECLARATOR)


State 3

    0 $accept: ROOT . $end

    $end  shift, and go to state 12


State 4

    1 ROOT: PROGRAM .
    3 PROGRAM: PROGRAM . ALL_DECLEARARION

    T_INT       shift, and go to state 1
    T_VARIABLE  shift, and go to state 2

    $default  reduce using rule 1 (ROOT)

    ALL_DECLEARARION        go to state 13
    DECLARATION             go to state 6
    DECLARATION_SPECIFIERS  go to state 7
    TYPE_SPECIFIER          go to state 8
    DECLARATOR              go to state 9
    DIRECT_DECLARATOR       go to state 10
    FUNCTION                go to state 11


State 5

    2 PROGRAM: ALL_DECLEARARION .

    $default  reduce using rule 2 (PROGRAM)


State 6

    4 ALL_DECLEARARION: DECLARATION .

    $default  reduce using rule 4 (ALL_DECLEARARION)


State 7

    6 DECLARATION: DECLARATION_SPECIFIERS . T_SIMICOLOUMN
    7            | DECLARATION_SPECIFIERS . INIT_DECLARATOR_LIST T_SIMICOLOUMN
   35 FUNCTION: DECLARATION_SPECIFIERS . DECLARATOR T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
   37         | DECLARATION_SPECIFIERS . DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
   39         | DECLARATION_SPECIFIERS . DECLARATOR T_LBRACKET T_RBRACKET T_SIMICOLOUMN
   40         | DECLARATION_SPECIFIERS . DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET T_SIMICOLOUMN

    T_VARIABLE     shift, and go to state 2
    T_SIMICOLOUMN  shift, and go to state 14

    INIT_DECLARATOR_LIST  go to state 15
    INIT_DECLARATOR       go to state 16
    DECLARATOR            go to state 17
    DIRECT_DECLARATOR     go to state 10


State 8

    8 DECLARATION_SPECIFIERS: TYPE_SPECIFIER .

    $default  reduce using rule 8 (DECLARATION_SPECIFIERS)


State 9

   36 FUNCTION: DECLARATOR . T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
   38         | DECLARATOR . T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT

    T_LBRACKET  shift, and go to state 18


State 10

   14 DECLARATOR: DIRECT_DECLARATOR .

    $default  reduce using rule 14 (DECLARATOR)


State 11

    5 ALL_DECLEARARION: FUNCTION .

    $default  reduce using rule 5 (ALL_DECLEARARION)


State 12

    0 $accept: ROOT $end .

    $default  accept


State 13

    3 PROGRAM: PROGRAM ALL_DECLEARARION .

    $default  reduce using rule 3 (PROGRAM)


State 14

    6 DECLARATION: DECLARATION_SPECIFIERS T_SIMICOLOUMN .

    $default  reduce using rule 6 (DECLARATION)


State 15

    7 DECLARATION: DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST . T_SIMICOLOUMN
   11 INIT_DECLARATOR_LIST: INIT_DECLARATOR_LIST . T_COMMA INIT_DECLARATOR

    T_SIMICOLOUMN  shift, and go to state 19
    T_COMMA        shift, and go to state 20


State 16

   10 INIT_DECLARATOR_LIST: INIT_DECLARATOR .
